[tool.poetry]
name = "flox-workflow"
version = "0.1.0"
homepage = "https://github.com/getflox/flox-workflow"
description = "Automate your development workflow with flox plugins and action hooks"
authors = ["Michal Przytulski <michal@przytulski.pl>", "Daniel Ancuta <whisller@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
python-slugify = "^4.0.0"

[tool.poetry.dev-dependencies]

[tool.poetry.plugins."flox.plugin"]
workflow = "flox_workflow:plugin"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
